# virtual-device-manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  DevicePanel.cpp  DevicePanel.h  DevicePanel.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
